--- a/Examples/Monocular/EuRoC.yaml
+++ b/Examples/Monocular/EuRoC.yaml
@@ -59,4 +59,4 @@ Viewer.ViewpointF: 500
 # Map Parapeters
 #--------------------------------------------------------------------------------------------
 Map.mapfile: MH01_Compression_10_test.bin
-# Map.mapfile: MH01.bin
+Map.mapfile: MH01.bin
