--- a/Examples/Stereo/EuRoC.yaml
+++ b/Examples/Stereo/EuRoC.yaml
@@ -117,4 +117,5 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parapeters
 #--------------------------------------------------------------------------------------------
-Map.mapfile: MH01.bin
+#test
+Map.mapfile: testtest.bin
