--- a/Examples/Stereo/EuRoC.yaml
+++ b/Examples/Stereo/EuRoC.yaml
@@ -118,4 +118,4 @@ Viewer.ViewpointF: 500
 # Map Parapeters
 #--------------------------------------------------------------------------------------------
 #test
-Map.mapfile: testtest.bin
+Map.mapfile: MH01.bin
