--- a/Examples/Monocular/EuRoC.yaml
+++ b/Examples/Monocular/EuRoC.yaml
@@ -58,6 +58,6 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parapeters
 #--------------------------------------------------------------------------------------------
-# Map.mapfile: MH01_kf_Compression_10_test.bin
-Map.mapfile: MH01_220530.bin
+Map.mapfile: MH01_kf_Compression_10_test.bin
+# Map.mapfile: MH01_220530.bin
 
