--- a/Examples/Monocular/EuRoC.yaml
+++ b/Examples/Monocular/EuRoC.yaml
@@ -5,15 +5,25 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 458.654
-Camera.fy: 457.296
-Camera.cx: 367.215
-Camera.cy: 248.375
+# Camera.fx: 458.654
+# Camera.fy: 457.296
+# Camera.cx: 367.215
+# Camera.cy: 248.375
 
-Camera.k1: -0.28340811
-Camera.k2: 0.07395907
-Camera.p1: 0.00019359
-Camera.p2: 1.76187114e-05
+# Camera.k1: -0.28340811
+# Camera.k2: 0.07395907
+# Camera.p1: 0.00019359
+# Camera.p2: 1.76187114e-05
+
+Camera.fx: 435.2046959714599
+Camera.fy: 435.2046959714599
+Camera.cx: 367.4517211914062
+Camera.cy: 252.2008514404297
+
+Camera.k1: 0.0
+Camera.k2: 0.0
+Camera.p1: 0.0
+Camera.p2: 0.0
 
 # Camera frames per second 
 Camera.fps: 20.0
@@ -58,6 +68,6 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parapeters
 #--------------------------------------------------------------------------------------------
-Map.mapfile: MH01_kf_Compression_10_test.bin
-# Map.mapfile: MH01_220530.bin
+# Map.mapfile: MH01_ba.bin
+Map.mapfile: MH01_KFcompression_test.bin
 
