--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "core": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "*.ipp": "cpp"
     }
 }
